add token-2022 core ixs and state

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "programs/memo",
     "programs/system",
     "programs/token",
+    "programs/token-2022",
     "sdk/log/crate",
     "sdk/log/macro",
     "sdk/pinocchio",
